ch08/ingress-nginx-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-nodeport
  namespace: ingress-nginx
spec:
  ports:
    - name: http
      nodePort: 31000
      port: 80
      protocol: TCP
      targetPort: http

    - name: https
      nodePort: 32000
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: NodePort
